[project]
name = "shared-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
